; ModuleID = '/home/carl/AnghaBench/lz4/tests/extr_fullbench.c_local_LZ4_decompress_fast_usingDict_prefix.c'
source_filename = "/home/carl/AnghaBench/lz4/tests/extr_fullbench.c_local_LZ4_decompress_fast_usingDict_prefix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i32, i32)* @local_LZ4_decompress_fast_usingDict_prefix to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @local_LZ4_decompress_fast_usingDict_prefix(i8* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %7, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = load i32, i32* %8, align 4
  %13 = load i8*, i8** %6, align 8
  %14 = getelementptr inbounds i8, i8* %13, i64 -65536
  %15 = call i32 @LZ4_decompress_fast_usingDict(i8* %10, i8* %11, i32 %12, i8* %14, i32 65536)
  %16 = load i32, i32* %8, align 4
  ret i32 %16
}

declare dso_local i32 @LZ4_decompress_fast_usingDict(i8*, i8*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
